# gixor

./: .gitignore  .gitmodules  404.html  Cargo.toml  Dockerfile  Justfile  Makefile.toml  README.md  en.search-data.json  en.search.js  en.search.min.8c2cc4a66d92d45890dc8da65b631a048485138c4eed3ae8f3196b35d3ada7d7.js  index.html  index.xml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  publish.yaml  update-version.yaml
.templates/: README.md  template.md
api/: all.html  enum.GixorError.html  fn.dump_boilerplates.html  fn.find_target_repositories.html  fn.list_entries.html  index.html  sidebar-items.js  struct.Boilerplate.html  struct.Gixor.html  struct.Name.html  struct.Repository.html  trait.AliasManager.html  trait.RepositoryManager.html  type.Result.html
api/alias/: index.html  struct.Alias.html
assets/completions/bash/: gixor
assets/completions/elvish/: gixor
assets/completions/fish/: gixor
assets/completions/powershell/: gixor
assets/completions/zsh/: _gixor
categories/: index.html  index.xml
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  main.rs  terminal.rs
cli/tests/: clone_and_find.rs  common.rs  dump.rs  repositories.rs
coverage/: index.html
coverage/coverage/Users/tamada/products/gixor/cli/src/: cli.rs.html  main.rs.html  terminal.rs.html
coverage/coverage/Users/tamada/products/gixor/lib/src/: alias.rs.html  git.rs.html  lib.rs.html  routine.rs.html  utils.rs.html
docs/: .gitignore  go.mod  hugo.yaml
docs/content/: _index.md  about.md  inside.md  install.md
docs/layouts/partials/: favicons.html
docs/layouts/partials/custom/: footer.html
docs/layouts/shortcodes/: badges.html
docs/resources/: icon.pptx
inside/: index.html
install/: index.html
lib/: Cargo.toml
lib/src/: alias.rs  aliases.rs  git.rs  gitbridge.rs  lib.rs  repos.rs  routine.rs  utils.rs
lib/src/gitbridge/: git2.rs  gix.rs  systemgit.rs
src/: cli.rs  git.rs  lib.rs  main.rs  routine.rs  terminal.rs  utils.rs
tags/: index.html  index.xml
testdata/: .gitignore  config.json
tests/: clone_and_find.rs  common.rs  dump.rs  find_test.rs
