[workspace]
members = [
    "lib",
    "cli"
]
resolver = "3"

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = [ "Haruaki Tamada" ]
license-file = "LICENSE"
repository = "https://github.com/tamada/gixor.git"
homepage = "https://tamada.github.io/gixor/"
readme = "README.md"
categories = [ "command-line-utilities", "configuration", "development-tools" ]
keywords = [ "cli", "gitignore", "gitignore-generator", "git", "shell", "gitignore-files", "gitignore-templates" ]
