[package]
name = "gixor"
readme = "README.md"
categories = ["development tools", "configuration" ]
description = "An API for managing .gitignore files."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
dirs = "6.0.0"
git2 = "0.20.0"
openssl = { version = "0.10", features = ["vendored"] }
ignore = "0.4.23"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
openssl-sys = "0.9"
