[package]
name = "gixor"
readme = "README.md"
categories = ["development tools", "configuration" ]
description = "An API for managing .gitignore files."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[features]
default = [ ]
uselibgit = [ "git2" ]
usegix = [ "gix" ]

[dependencies]
dirs = "6.0.0"
ignore = "0.4.23"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
gix = { version = "0.76.0", features = [ "blocking-http-transport-reqwest-rust-tls", "blocking-network-client", "merge", "tree-editor" ], optional = true }
git2 = { version = "0.20.3", optional = true }
hex = "0.4.3"
